[tool.poetry]
name = "dalle2-pytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10"
torchvision = "^0.12.0"
click = "^8.1.3"
tqdm = "^4.64.0"
x-clip = "^0.6.1"
einops = "^0.4.1"
einops-exts = "^0.0.3"
kornia = "^0.6.5"
resize-right = "^0.0.2"
CoCa-pytorch = "^0.0.6"
clip-anytorch = "^2.4.0"
rotary-embedding-torch = "^0.1.5"
pydantic = "^1.9.1"
torchmetrics = {extras = ["image"], version = "^0.9.1"}
vector-quantize-pytorch = "^0.6.0"
webdataset = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dalle2_pytorch = "dalle2_pytorch.cli:main"
dream = "dalle2_pytorch.cli:dream"